# DigCreate

./: CMakeLists.txt  LICENSE.md  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp
